[gd_scene load_steps=8 format=3 uid="uid://bs5wjcmpk7mwt"]

[ext_resource type="Script" path="res://Entity.gd" id="1_616jk"]
[ext_resource type="Texture2D" uid="uid://bgj0s82eh0veq" path="res://Graphics/_Test_Char.png" id="2_mtxeu"]
[ext_resource type="Texture2D" uid="uid://b2uhtvffpi30n" path="res://Graphics/Facing_Indicator.png" id="3_26ljx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dx2dy"]
radius = 8.0

[sub_resource type="Animation" id="Animation_3id5w"]
resource_name = "Move"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_j1re4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h5gws"]
_data = {
"Move": SubResource("Animation_3id5w"),
"RESET": SubResource("Animation_j1re4")
}

[node name="Entity" type="Node2D"]
position = Vector2(100, 100)
script = ExtResource("1_616jk")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_mtxeu")

[node name="Facing_Indicator" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.498039)
show_behind_parent = true
texture = ExtResource("3_26ljx")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_dx2dy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h5gws")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Check_Cast" type="RayCast2D" parent="."]
target_position = Vector2(0, -16)
collision_mask = 6

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
